src/client/src/sass/main.css
/* ... */
.fixed-nav .logo {
  max-width: 50rem;
  padding: 0 3rem;
  letter-spacing: .3rem;
  color: #fff;
  clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%); }
  @media only screen and (max-width: 37.5em) {
    .fixed-nav .logo {
      width: 0;
      padding: 0;
      letter-spacing: 0; } }

.social {
  display: flex; }
  .social__link {
    list-style: none;
    font-size: 4rem;
    padding: 1rem;
    transition: color 0.3s; }
    .social__link:hover {
      cursor: pointer; }
  .social__anchor:link, .social__anchor:visited {
    color: #031541; }
  .social__anchor:hover {
    color: #182675; }

.tech .bar {
  height: 30px;
  max-width: 800px;
  margin: 0 auto 10px auto;
  line-height: 30px;
  font-size: 16px;
  color: white;
  padding: 0 0 0 10px;
  position: relative; }
  @media only screen and (max-width: 56.25em) {
    .tech .bar {
      margin-left: 0; } }
  .tech .bar--html:after {
    max-width: 90%;
    background: #e34f26; }
  .tech .bar--css:after {
    max-width: 70%;
    background: #4285f4; }
  .tech .bar--js:after {
    max-width: 80%;
    background: #f7df1e; }
  .tech .bar--react:after {
    max-width: 70%;
    background: #00d8ff; }
  .tech .bar--node:after {
    max-width: 35%;
    background: #44883e; }

.tech .bar::before {
  content: "";
  width: 100%;
  position: absolute;
  left: 0;
  height: 30px;
  top: 0;
  z-index: -2;
  background: #ecf0f1; }

.tech .bar:hover::before {
  content: "";
  width: 100%;
  position: absolute;
  left: 0;
  height: 30px;
  top: 0;
  z-index: -2;
  background: #ecf0f1; }

.tech .bar::after {
  content: "";
  height: 30px;
  transition: 0.7s;
  display: block;
  width: 100%;
  animation: bar-before 1 1.8s;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  clip-path: polygon(0 0, 98% 0, 100% 100%, 0 100%); }

.tech .bar:hover::after {
  content: "";
  height: 30px;
  transition: 0.7s;
  display: block;
  width: 100%;
  animation: bar-before 1 1.8s;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  clip-path: polygon(0 0, 98% 0, 100% 100%, 0 100%); }

.about .profile-wrapper {
  display: grid;
  grid-gap: 7rem; }

.about .profile {
  position: relative;
  display: grid;
  grid-template-columns: 30% 1fr;
  grid-gap: 7rem;
  align-items: center;
  transition: all 0.5s ease; }
  @media only screen and (max-width: 75em) {
    .about .profile {
      grid-gap: 4.5rem; } }
  @media only screen and (max-width: 56.25em) {
    .about .profile {
      grid-template-columns: none;
      grid-gap: 3rem; } }
  @media only screen and (max-width: 37.5em) {
    .about .profile {
      grid-gap: 2.5rem; } }
  .about .profile__description {
    animation: moveInTop 0.5s;
    display: flex;
    flex-direction: column;
    grid-template-columns: 1fr;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
    padding: 5rem 1rem; }
    .about .profile__description:hover {
      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 3px 10px 0 rgba(0, 0, 0, 0.2); }
    @media only screen and (max-width: 56.25em) {
      .about .profile__description {
        grid-template-columns: minmax(max-content, 1fr) 1fr;
        align-items: center; } }
    @media only screen and (max-width: 37.5em) {
      .about .profile__description {
        grid-template-columns: none;
        justify-items: center; } }
  .about .profile__text {
    font-size: 1.7rem;
    color: #2e303e; }
    @media only screen and (max-width: 56.25em) {
      .about .profile__text {
        width: 70%; } }
    @media only screen and (max-width: 37.5em) {
      .about .profile__text {
        text-align: center;
        width: 55%; } }
  .about .profile__photo {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    height: 20rem;
    width: 20rem;
    background: #dbb0cf;
    transition: background 1s ease-out;
    margin: 0 auto;
    margin-bottom: 3rem;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19); }
    .about .profile__photo:hover {
      background: #c37bb0; }
    .about .profile__photo .image {
      height: 100%; }

.about .more-info {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 2rem; }
  @media only screen and (max-width: 56.25em) {
    .about .more-info {
      grid-template-columns: 1fr 1fr; } }
  @media only screen and (max-width: 37.5em) {
    .about .more-info {
      grid-template-columns: 1fr; } }

.tech {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
  padding: 5rem 1rem; }
  .tech:hover {
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4), 0 3px 10px 0 rgba(0, 0, 0, 0.2); }

.circle-container {
  position: relative;
  width: 20em;
  height: 20em;
  border-radius: 50%;
  padding: 0;
  list-style: none;
  border: solid 5px tomato;
  position: absolute; }
  .circle-container > * {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -3em;
    width: 6em;
    height: 6em; }
    .circle-container > *:nth-of-type(1) {
      transform: rotate(0deg) translate(10em) rotate(0deg); }
    .circle-container > *:nth-of-type(2) {
      transform: rotate(45deg) translate(10em) rotate(-45deg); }
    .circle-container > *:nth-of-type(3) {
      transform: rotate(90deg) translate(10em) rotate(-90deg); }
    .circle-container > *:nth-of-type(4) {
      transform: rotate(135deg) translate(10em) rotate(-135deg); }
    .circle-container > *:nth-of-type(5) {
      transform: rotate(180deg) translate(10em) rotate(-180deg); }
    .circle-container > *:nth-of-type(6) {
      transform: rotate(225deg) translate(10em) rotate(-225deg); }
    .circle-container > *:nth-of-type(7) {
      transform: rotate(270deg) translate(10em) rotate(-270deg); }
    .circle-container > *:nth-of-type(8) {
      transform: rotate(315deg) translate(10em) rotate(-315deg); }

.container {
  max-width: 114rem;
  width: 100%;
  margin: 0 auto;
  padding: 1rem; }
  .container--nav {
    padding: 0.25rem; }
/* ... */

